try again to fix mobile stretching

--- a/index.css
+++ b/index.css
@@ -69,8 +69,8 @@ ul.intpara{
 }
 
 .keysketch {
-    width: 70%;
-    height: auto;
+    width: 70%!important;
+    height: auto!important;
 }
 
 .caption {
@@ -147,8 +147,8 @@ ul.intpara{
 }
 
 .personas {
-    width: 80%;
-    height: auto;
+    width: 80%!important;
+    height: auto!important;
     border-radius: 5px;
     background-color: white;
     margin: 10px;
@@ -156,8 +156,8 @@ ul.intpara{
 }
 
 .storyboard {
-    width: 80%;
-    height: auto;
+    width: 80%!important;
+    height: auto!important;
     margin-bottom: 20px;
 }
 
